<resources>
    <string name="app_name">Predator</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="application_icon">Application icon</string>
    <string name="authentication">Authentication</string>
    <string name="continue_as_regular_user">Continue as regular user</string>
    <string name="continue_as_registered_user">Continue as registered user</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="no_application_available_to_open_this_url">No application available to open this url</string>
    <string name="error">Error</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_network_available">No network available.</string>
    <string name="settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="not_connected_to_network_err">Not connected to network!</string>
    <string name="not_yet_implemented">Not yet implemented!</string>
    <string name="not_yet_supported">Not yet supported!</string>
    <string name="share_using">Share using&#8230;</string>
    <string name="permission_denied_err_msg">Permission denied!\nPlease accept the permission inorder to make the application work properly!</string>
    <string name="authentication_failure">Unable to authenticate with ProductHunt, please try again.</string>
    <string name="activity_authenticator_continue">Continue</string>
    <string name="activity_authenticator_message">Please wait while we try to authenticate with ProductHunt.</string>
    <string name="activity_authenticator_cancel">Cancel</string>
    <string name="activity_authenticator_retry">Retry</string>
    <string name="activity_authenticator_network_error">Looks like your internet connection is turned off, please switch it on and press retry button.</string>
    <string name="menu_nav_posts">Posts</string>
    <string name="menu_nav_bookmarks">Bookmarks</string>
    <string name="menu_nav_collections">Collections</string>
    <string name="menu_nav_manage">Manage</string>
    <string name="menu_nav_my_profile">My Profile</string>
    <string name="menu_nav_settings">Settings</string>
    <string name="menu_nav_about">About</string>
    <string name="menu_nav_donate">Donate</string>
    <string name="menu_nav_rating">Rate on Google Play</string>
    <string name="menu_nav_spread_love">Spread love</string>
    <string name="menu_posts_search">Search Posts</string>
    <string name="menu_posts_sort">Sort</string>
    <string name="menu_posts_sort_latest">Latest</string>
    <string name="menu_posts_sort_vote_count">Vote count</string>
    <string name="menu_posts_sort_oldest">Oldest</string>
    <string name="menu_posts_switch_layout">Switch Layout</string>
    <string name="menu_posts_switch_layout_list">List</string>
    <string name="menu_posts_switch_layout_small_cards">Small Cards</string>
    <string name="menu_posts_switch_layout_large_cards">Large Cards</string>
    <string name="menu_posts_clear">Clear Posts</string>
    <string name="menu_post_details_refresh">Refresh</string>
    <string name="menu_post_details_share">Share</string>
    <string name="menu_post_details_open_redirect_url">Open redirect url</string>
    <string name="menu_user_profile_refresh">Refresh</string>
    <string name="menu_user_open_website">Open user\'s website</string>
    <string name="menu_about_feedback">Feedback</string>
    <string name="menu_about_changelog">Changelog</string>
    <string name="menu_about_privacy_policy">Privacy Policy</string>
    <string name="menu_search_info">Info</string>
    <string name="menu_collections_search">Search Collections</string>
    <string name="onboard_skip">Skip</string>
    <string name="onboard_next">Next</string>
    <string name="onboard_previous">Previous</string>
    <string name="onboard_app_desc">A beautifully crafted client for producthunt.com . Get the latest tech products on your fingertips. View latest products and collections uploaded on ProductHunt.</string>
    <string name="onboard_feature_1">View latest products</string>
    <string name="onboard_feature_1_desc">Discover amazing products which might change your life and stay up to date with latest technological products.</string>
    <string name="onboard_feature_2">View featured collections</string>
    <string name="onboard_feature_2_desc">Check out the curated lists of products made by various other hunters out there in the wild.</string>
    <string name="onboard_feature_3">Minimal design</string>
    <string name="onboard_feature_3_desc">Simple and easy to navigate throughout the application and use of small delightfull animations add a cherry on top.</string>
    <string name="onboard_feature_4">Background syncing</string>
    <string name="onboard_feature_4_desc">Synchronize data even if the application is offline and stay up to date always. (Optional, can be activated via application settings)</string>
    <string name="onboard_final_title">Just, em&#8230; one more thing!</string>
    <string name="onboard_final_desc">This application is still in development, so you might face some bugs ;( . If you face any bugs, then please report them so I can fix them as soon as possible.</string>
    <string name="onboard_continue">Continue</string>
    <string name="dashboard_home">Home</string>
    <string name="dashboard_open_nav_drawer">Open navigation drawer</string>
    <string name="dashboard_close_nav_drawer">Close navigation drawer</string>
    <string name="oauth_wv_title">Product Hunt</string>
    <string name="oauth_wv_close">Close</string>
    <string name="item_list_post_image_desc">Post image</string>
    <string name="item_load_more_posts_error_image_desc">Error</string>
    <string name="item_load_more_posts_error_title">Cannot hunt more posts ;(</string>
    <string name="item_load_more_posts_error_desc">Looks like your internet connection is turned off, please switch it on and press retry button.</string>
    <string name="posts_hunting_more_posts">Hunting more posts!</string>
    <string name="posts_date_today">Today</string>
    <string name="posts_date_yesterday">Yesterday</string>
    <string name="posts_successfully_loaded_posts">Success, here ya go!</string>
    <string name="posts_cleared">No posts available.</string>
    <string name="posts_cannot_clear_while_loading">Cannot clear posts while they are being loaded!</string>
    <string name="posts_clear_dialog_title">Clear Posts</string>
    <string name="posts_clear_dialog_message">This would clear all of the posts shown in the dashboard.</string>
    <string name="posts_clear_dialog_positive_button">Clear</string>
    <string name="posts_clear_dialog_negative_button">Cancel</string>
    <string name="posts_sorting_by_latest">Latest posts will be shown first from now on!</string>
    <string name="posts_sorting_by_vote_count">Posts with highest votes will be shown first from now on!</string>
    <string name="posts_cannot_sort_while_loading">Cannot sort posts while they are being loaded!</string>
    <string name="loading_view_message">Wait while we hunt %s!</string>
    <string name="loading_view_latest_posts">latest posts</string>
    <string name="loading_view_latest_collections">latest collections</string>
    <string name="loading_view_collections_posts">all of the posts available in this collection</string>
    <string name="loading_view_Comments">latest comments</string>
    <string name="loading_view_image_desc">Notification image</string>
    <string name="post_details_title">Post Details</string>
    <string name="post_details_users">Users</string>
    <string name="post_details_media">Media</string>
    <string name="post_details_comments">Comments</string>
    <string name="post_details_loading_please_wait">Please wait&#8230;</string>
    <string name="post_details_unavailable">Unavailable currently.</string>
    <string name="post_details_no_redirect_url_available">No redirect url available.</string>
    <string name="post_details_cannot_share_app">Unable to share this post, please try again!</string>
    <string name="post_details_refreshing">Refreshing&#8230;</string>
    <string name="post_details_updated_details">Updated details</string>
    <string name="post_details_votes">votes</string>
    <string name="item_post_user_image_desc">User image</string>
    <string name="item_post_user_both">Hunter &amp; Maker</string>
    <string name="item_post_user_hunter">Hunter</string>
    <string name="item_post_user_maker">Maker</string>
    <string name="item_post_user_voted">Voted</string>
    <string name="item_post_user_name_alternative">\@%s</string>
    <string name="item_user_profile_users_headline_unavailable">Unavailable</string>
    <string name="item_media_image_desc">Media Image</string>
    <string name="item_media_type_image">IMG</string>
    <string name="item_media_type_gif">GIF</string>
    <string name="item_media_type_video">VID</string>
    <string name="item_post_details_comment_user_image_desc">User image</string>
    <string name="item_collection_image_desc">Collection backdrop image</string>
    <string name="item_collection_no_desc_available">No description available</string>
    <string name="item_load_more_collection_error_title">Cannot hunt more collections ;(</string>
    <string name="item_load_more_collection_error_desc">Looks like your internet connection is turned off, please switch it on and press retry button.</string>
    <string name="activity_collection_details_image_desc">Collection image</string>
    <string name="activity_media_full_screen_close">Close</string>
    <string name="activity_media_full_screen_next">Next image</string>
    <string name="activity_media_full_screen_previous">Previous image</string>
    <string name="navigation_drawer_header_image_desc">App logo</string>
    <string name="activity_about">About</string>
    <string name="activity_about_logo_desc">App logo</string>
    <string name="activity_about_app_name">Predator</string>
    <string name="activity_about_app_desc">Minimal client for ProductHunt.</string>
    <string name="activity_about_github">github</string>
    <string name="activity_about_google_plus">google plus</string>
    <string name="activity_about_mail">mail</string>
    <string name="activity_about_version">Version %s</string>
    <string name="activity_about_developer_title">Developer</string>
    <string name="activity_about_developer_name">Kartik Sharma</string>
    <string name="activity_about_developer_name_short">Kartik</string>
    <string name="activity_about_developer_username">cr42yh17m4n</string>
    <string name="activity_about_developer_username_formatted">\@cr42yh17m4n</string>
    <string name="activity_about_developer_headline">Android dev</string>
    <string name="activity_about_developer_type">Predator Dev</string>
    <string name="activity_about_developed_by_title">Made with love by</string>
    <string name="activity_about_contributions_title">Contributions</string>
    <string name="activity_about_kajal_mittal">Kajal Mittal</string>
    <string name="activity_about_kajal_mittal_type">For her regular and relevant feedback.</string>
    <string name="activity_about_kajal_mittal_username"></string>
    <string name="activity_about_special_thanks_title">Special Thanks</string>
</resources>