<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2016 Kartik Sharma
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_onboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
        android:id="@+id/text_view_feature_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_avg"
        android:alpha="0"
        android:gravity="start"
        android:paddingEnd="@dimen/padding_avg"
        android:paddingStart="@dimen/padding_avg"
        android:text="@string/onboard_feature_1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:translationX="@dimen/onboard_translation_x" />

    <TextView
        android:id="@+id/text_view_feature_1_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_small"
        android:alpha="0"
        android:gravity="start"
        android:paddingEnd="@dimen/padding_avg"
        android:paddingStart="@dimen/padding_avg"
        android:text="@string/onboard_feature_1_desc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:translationX="@dimen/onboard_translation_x" />

    <TextView
        android:id="@+id/text_view_feature_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_large"
        android:alpha="0"
        android:gravity="start"
        android:paddingEnd="@dimen/padding_avg"
        android:paddingStart="@dimen/padding_avg"
        android:text="@string/onboard_feature_2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:translationX="@dimen/onboard_translation_x" />

    <TextView
        android:id="@+id/text_view_feature_2_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_small"
        android:alpha="0"
        android:gravity="start"
        android:paddingEnd="@dimen/padding_avg"
        android:paddingStart="@dimen/padding_avg"
        android:text="@string/onboard_feature_2_desc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:translationX="@dimen/onboard_translation_x" />

    <TextView
        android:id="@+id/text_view_feature_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_large"
        android:alpha="0"
        android:gravity="start"
        android:paddingEnd="@dimen/padding_avg"
        android:paddingStart="@dimen/padding_avg"
        android:text="@string/onboard_feature_3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:translationX="@dimen/onboard_translation_x" />

    <TextView
        android:id="@+id/text_view_feature_3_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_small"
        android:alpha="0"
        android:gravity="start"
        android:paddingEnd="@dimen/padding_avg"
        android:paddingStart="@dimen/padding_avg"
        android:text="@string/onboard_feature_3_desc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:translationX="@dimen/onboard_translation_x" />

    <TextView
        android:id="@+id/text_view_feature_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_large"
        android:alpha="0"
        android:gravity="start"
        android:paddingEnd="@dimen/padding_avg"
        android:paddingStart="@dimen/padding_avg"
        android:text="@string/onboard_feature_4"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:translationX="@dimen/onboard_translation_x" />

    <TextView
        android:id="@+id/text_view_feature_4_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/margin_avg"
        android:layout_marginTop="@dimen/margin_small"
        android:alpha="0"
        android:gravity="start"
        android:paddingEnd="@dimen/padding_avg"
        android:paddingStart="@dimen/padding_avg"
        android:text="@string/onboard_feature_4_desc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:translationX="@dimen/onboard_translation_x" />

    </LinearLayout>

</merge>