<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2016 Kartik Sharma
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/text_view_date"
    android:paddingBottom="@dimen/padding_avg"
    android:paddingTop="@dimen/padding_avg">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/image_view_error_icon"
        android:layout_width="@dimen/item_list_post_image_width"
        android:layout_height="@dimen/item_list_post_image_height"
        android:layout_marginStart="@dimen/material_component_lists_icon_left_padding"
        android:contentDescription="@string/item_load_more_posts_error_image_desc"
        android:padding="@dimen/item_load_more_image_padding"
        fresco:placeholderImage="@drawable/ic_error_alternative"
        fresco:roundedCornerRadius="@dimen/item_load_more_image_corner_padding" />

    <TextView
        android:id="@+id/text_view_error_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_component_lists_text_left_padding"
        android:layout_toStartOf="@+id/button_retry"
        android:text="@string/item_load_more_posts_error_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/text_view_error_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_error_title"
        android:layout_marginStart="@dimen/material_component_lists_text_left_padding"
        android:layout_toStartOf="@+id/button_retry"
        android:text="@string/item_load_more_posts_error_desc"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <Button
        android:id="@+id/button_retry"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/material_component_lists_icon_left_padding"
        android:text="@string/retry" />

    <ProgressBar
        android:id="@+id/progress_bar_loading"
        android:layout_width="@dimen/item_load_more_progress_bar_width"
        android:layout_height="@dimen/item_load_more_progress_bar_height"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>