<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2016 Kartik Sharma
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_authenticator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.crazyhitty.chdev.ks.predator.ui.views.LoadingDialogHeaderView
        android:id="@+id/loading_dialog_header_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_authenticator_header_height" />

    <TextView
        android:id="@+id/text_view_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loading_dialog_header_view"
        android:layout_marginEnd="@dimen/material_component_dialogs_padding_around_content_area"
        android:layout_marginStart="@dimen/material_component_dialogs_padding_around_content_area"
        android:layout_marginTop="@dimen/material_component_dialogs_padding_between_title_and_body_text"
        android:text="@string/activity_authenticator_message"
        android:textSize="@dimen/material_typography_body1"
        android:minLines="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_content"
        android:layout_marginTop="@dimen/material_component_dialogs_padding_around_buttons"
        android:layout_marginBottom="@dimen/material_component_dialogs_padding_around_buttons"
        android:layout_marginStart="@dimen/material_component_dialogs_padding_around_buttons"
        android:layout_marginEnd="@dimen/material_component_dialogs_padding_around_buttons"
        android:gravity="end"
        android:animateLayoutChanges="true">

        <Button
            android:id="@+id/button_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_authenticator_cancel"
            android:textColor="?attr/colorAccent"/>

        <Button
            android:id="@+id/button_retry"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_authenticator_retry"
            android:textColor="?attr/colorAccent"
            android:visibility="gone"
            tools:visibility="visible"/>

    </LinearLayout>

</RelativeLayout>