<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2016 Kartik Sharma
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager_onboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/relative_layout_footer" />

        <RelativeLayout
            android:id="@+id/relative_layout_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_small"
                android:background="@color/material_grey_700" />

            <Button
                android:id="@+id/button_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackgroundBorderless"
                android:text="@string/onboard_skip" />

            <com.rd.PageIndicatorView
                android:id="@+id/view_pager_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <ImageButton
                android:id="@+id/image_button_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/material_layout_app_bar_icon_padding"
                android:layout_toStartOf="@+id/image_button_next"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/onboard_previous"
                app:srcCompat="@drawable/ic_previous_24dp" />

            <ImageButton
                android:id="@+id/image_button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/material_layout_app_bar_icon_padding"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/onboard_next"
                app:srcCompat="@drawable/ic_next_24dp" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>